--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -1,15 +1,15 @@
 basics:
-  name: "Dongsoo Kim"
+  name: "金東秀"
   label: "Student"
   picture: /assets/img/seattle.png
   email: "hiswing91@gmail.com"
   phone: "(+82) 010-5612-0881"
-  website: "https://lazyren.github.io/"
+  website: "https://kdstheace.github.io/"
   summary: >
-    Hello, I'm DaeIn Lee from SAP Labs Korea.<br>
-    I like to solve brain teasing problems in the field of CSE.<br>
-    I'd like to describe myself as a fast learner;<br>
-    I am confident that I can satisfy expectations of coworkers.
+    <br>
+    自分の手でITサービスを作り、それで世界を豊かにすることが夢で<br>
+    その夢を叶えるために頑張っています。<br>
+    無限成長とチームワーク、そして責任感を大事にして前に進んでいます。
   # location:
   #   address: "2712 Broadway St"
   #   postalCode: "CA 94115"
@@ -18,11 +18,9 @@ basics:
   #   region: "California"
   profiles:
     - network: "Github"
-      username: "LazyRen"
-      url: "https://github.com/LazyRen"
-    - network: "LinkedIn"
-      username: "DaeIn Lee"
-      url: "https://www.linkedin.com/in/daein-lee-3b6ba9139/"
+      username: "kdstheace"
+      url: "https://github.com/kdstheace"
+
 work:
   - company: "SAP Labs Korea"
     position: "HANA Core Developer"
@@ -108,7 +106,7 @@ projects:
     startDate: "2018-08-01"
     endDate: "2019-10-31"
     summary: "Evaluating cache / multi thread Performance of <a href='https://github.com/wangziqi2013/BwTree'>Open Bw-Tree</a> to find bottleneck and improvement performance."
-    url: "https://lazyren.github.io/tag-bwtree/"
+    url: "https://kdstheace.github.io/tag-bwtree/"
     highlights:
       - "Implementing update function based on the <a href='https://hyeontaek.com/papers/openbwtree-sigmod2018.pdf'>page</a>."
       - "Make update function atomic & reduce call of traverse function."
