--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -1,7 +1,7 @@
 basics:
   name: "金東秀"
   label: "Student"
-  picture: /assets/img/seattle.png
+  picture: /assets/img/Dongsoo.jpg
   email: "hiswing91@gmail.com"
   phone: "(+82) 010-5612-0881"
   website: "https://kdstheace.github.io/"
