--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -18,7 +18,7 @@ author1:
 
   # This photo will be used in the about section
   picture:
-    path:            /assets/img/profile.png
+    path:            /assets/img/profile.jpg
     # srcset is optional, but can be used to provide higher res versions for retina displays
     # srcset:
     #   1x:
