--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ author:
   # Used by `jekyll-feed`:
   name:                Dongsoo Kim
   email:               hiswing91@gmail.com
-  picture:             /assets/img/profile.png
+  picture:             /assets/img/profile.jpg
   social:
     # linkedin:        
     github:          kdstheace
