--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,7 +11,7 @@ author1:
     Ever-growing IT engineer<br>
     Studied Web developing with STS(JAVA, MyBatis, Oracle etc)<br>
     Data Science with Python, R<br>
-    * Business, Finances, Economics, International politics
+    Business, Finances, Economics, International politics<br>
     Please check my [Resume][resume] to find out more about me!<br>
 
     [resume]: /resume/
