--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # IMPORTANT: Set the URL of your site.
 # Set to https://<username>.github.io when hosting on GitHub Pages
 # (unless you are using a custom domain).
-url:                   https://kdstheace.github.io
+url: https://kdstheace.github.io
 
 # IMPORTANT: Set The "base URL" of your site.
 # When your site sits in a subdirectory, set to /<name of directory>
@@ -12,47 +12,46 @@ url:                   https://kdstheace.github.io
 # Use the empty string '' otherwise.
 # For GitHub project sites, this is usually the name of the project,
 # e.g. `/hydejack`.
-baseurl:               ''
-
+baseurl: ""
 
 # General settings
 # ---------------------------------------------------------------------------------------
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
-lang:                  ko-KR, en-US, ja-JP
+lang: ko-KR, en-US, ja-JP
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Daniel Kim
+title: Daniel Kim
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
-description:           >
+description: >
   Work Hard to grow and make a better world.
 
 # A shorter description for the sidebar.
-tagline:               >
+tagline: >
   Make a better world with my skill
 
 # A list of keywords for your blog
-keywords:              []
+keywords: []
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo:                  /assets/img/profile.png
+logo: /assets/img/profile.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                Dongsoo Kim
-  email:               hiswing91@gmail.com
-  picture:             /assets/img/profile.jpg
+  name: Dongsoo Kim
+  email: hiswing91@gmail.com
+  picture: /assets/img/profile.jpg
   social:
-    # linkedin:        
-    github:          kdstheace
-    # stackoverflow:  
-    email:           hiswing91@gmail.com
+    linkedin:
+    github: kdstheace
+    stackoverflow: https://stackoverflow.com/users/15602887/daniel-kim
+    email: hiswing91@gmail.com
 
 # Add links to the sidebar.
 # menu:
@@ -76,17 +75,16 @@ author:
 #     url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2021. All rights reserved.
+copyright: © 2021. All rights reserved.
 
 # Format of the permalinks
 # permalink:             /blog/:categories/:year-:month-:day-:title/
-permalink:             none
+permalink: none
 
 # Pagination configuration (used by the `blog` layout)
-paginate:              10
-paginate_path:         /page-:num/
-excerpt_separator:     <!--more-->
-
+paginate: 10
+paginate_path: /page-:num/
+excerpt_separator: <!--more-->
 
 # Theme
 # ---------------------------------------------------------------------------------------
@@ -94,33 +92,32 @@ excerpt_separator:     <!--more-->
 # theme: jekyll-theme-hydejack
 # remote_theme: hydecorp/hydejack@v9
 
-
 # Customizaton
 # ----------------------------------------------------------------------------------------
 
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/sidebar-bg.jpg
-accent_color:          rgb(79,177,186)
+accent_image: /assets/img/sidebar-bg.jpg
+accent_color: rgb(79,177,186)
 
 # This is used for the `theme-color` meta tag,
 # which changes the background color of the browser UI in certain browsers.
 # Defaults to `accent_color`.
-theme_color:           rgb(25,55,71)
+theme_color: rgb(25,55,71)
 
 # The string encoding which fonts to fetch from Google Fonts.
 # See: <https://hydejack.com/docs/configuration/>
-google_fonts:          Roboto+Slab:700|Noto+Sans:400,400i,700,700i
+google_fonts: Roboto+Slab:700|Noto+Sans:400,400i,700,700i
 
 # The text font. Expects a string that is a valid CSS font-family value.
 # To change font-weight, see _sass/variables.scss
-font:                  Noto Sans, Helvetica, Arial, sans-serif
+font: Noto Sans, Helvetica, Arial, sans-serif
 
 # The font used for headings. Expects a string that is a valid CSS font-family value.
 # To change font-weight, see _sass/variables.scss
-font_heading:          Roboto Slab, Helvetica, Arial, sans-serif
+font_heading: Roboto Slab, Helvetica, Arial, sans-serif
 
 # The font used for code blocks. Expects a string that is a valid CSS font-family value.
-font_code:             Fira Code, Menlo, Monaco, Consolas, monospace;
+font_code: Fira Code, Menlo, Monaco, Consolas, monospace;
 
 defaults:
   # You can use this to provide a default accent color and background for
@@ -135,57 +132,56 @@ defaults:
 
   # Don't include documents in assets in the sitemap
   - scope:
-      path:            assets/
+      path: assets/
     values:
-      sitemap:         false
+      sitemap: false
 
   # You can use the following to enable comments on all posts.
   - scope:
-      type:            posts
+      type: posts
     values:
-      comments:        true
+      comments: true
       # https://applause-button.com/
-      applause_button:       true
+      applause_button: true
 
   # `jekyll-seo-tag` will mark collection outputs as `BlogPosting`,
   # but we want them to be `WebPage`s:
   - scope:
-      type:            projects
+      type: projects
     values:
       seo:
-        type:          WebPage
+        type: WebPage
   - scope:
-      type:            featured_categories
+      type: featured_categories
     values:
       seo:
-        type:          WebPage
+        type: WebPage
   - scope:
-      type:            featured_tags
+      type: featured_tags
     values:
       seo:
-        type:          WebPage
+        type: WebPage
 
 kramdown:
-  math_engine:         mathjax
-  math_engine_opts:    {}
-  footnote_backlink:   '&#x21a9;&#xfe0e;'
-
+  math_engine: mathjax
+  math_engine_opts: {}
+  footnote_backlink: "&#x21a9;&#xfe0e;"
 
 # 3rd Party Integrations
 # ----------------------------------------------------------------------------------------
 
 # Set your Google Analytics id to receive `pageview` events.
 # To remove Google Anaylics from your page, remove the line below.
-# google_analytics:      
+# google_analytics:
 
 # Set which comment system to use
 comments:
   # 'disqus' or 'utterances' are available
-  provider:            utterances
+  provider: utterances
 
 # Setting a disqus shortname will enable the comment section on
 # pages with `comments: true` in the front matter.
-disqus:                kdstheaceeng
+disqus: kdstheaceeng
 
 # You must install utterances github app before use.(https://github.com/apps/utterances)
 # Make sure all variables are set properly. Check below link for detail.
@@ -195,7 +191,6 @@ disqus:                kdstheaceeng
 # PRO version only!
 # tinyletter:            <username>
 
-
 # Hydejack Settings
 # ----------------------------------------------------------------------------------------
 # These settings are specific to Hydejack.
@@ -203,120 +198,118 @@ disqus:                kdstheaceeng
 hydejack:
   # Configure the order of complementary content on blog posts
   # post_addons:         [about, newsletter, related, random, comments]
-  post_addons:         [about, comments]
+  post_addons: [about, comments]
 
   # Configure the order of complementary content on project pages
   # project_addons:      [about, newsletter, other, comments]
-  project_addons:      [about, other, comments]
+  project_addons: [about, other, comments]
 
   # Set to `true` if you don't want to show an icon indicating external links
-  no_mark_external:    true
+  no_mark_external: true
 
   # Set to `true` if third party plugins fail to work with dynamically loaded pages
-  no_push_state:       false
+  no_push_state: false
 
   # Set to `true` if you want to disable the drawer
-  no_drawer:           false
+  no_drawer: false
 
   # Set to `true` if you don't to use the auto-hiding (JavaScript based) navbar.
   # Note that this will not hide the navbar completely, only replace it with a static one.
   # Use custom css to hide completely, e.g. `#_navbar { display: none }`.
-  no_navbar:           false
+  no_navbar: false
 
   # Set to true to disable the built-in search functionality.
   # Note that search is disabled during local use to save on build time.
   # Run Jekyll with the `JEKYLL_ENV` environment variable set to `production` to enable.
-  no_search:           false
+  no_search: false
 
   # Set to `true` if you do not want parts of the css inlined in <head/>
   # This will increase site build speed dramatically!
-  no_inline_css:       false
+  no_inline_css: false
 
   # Set to `true` if you don't intend on changing the accent color on a per-page basis.
   # This will increase site build speed!
-  no_page_style:       true
+  no_page_style: true
 
   # Code blocks and tables "break" the layout by spanning the full available width.
   # Set this to true if you want them to be the same width as other content.
-  no_break_layout:     true
+  no_break_layout: true
 
   # Set to `true` to disable the dynamic Table of Contents on large screens.
-  no_toc:              false
+  no_toc: false
 
   # When set to `true`, will not extend the content in the "third column" on large screens.
   # Instead, all content will remains within the center column.
   # Note that this will not affect the Table of Contents, use `no_toc` instead.
-  no_third_column:     false
+  no_third_column: false
 
   # Set to `true` if you don't like oversized headlines on large screens.
-  no_large_headings:   true
+  no_large_headings: true
 
   # Set to `true` if you do not want to expose your resume and projects
   # in machine-readable formats.
-  no_structured_data:  false
+  no_structured_data: false
 
   # You can set this to `true` if you don't want to set the `theme-color` meta tag,
   # This only affects the meta tag, not the color specified in the app manifest.
-  no_theme_color:      false
+  no_theme_color: false
 
   # Disable the breadcrumbs above the title
-  no_breadcrumbs:      false
+  no_breadcrumbs: false
 
   # Set to `true` when building with the `--lsi` option
-  use_lsi:             false
+  use_lsi: false
 
   # When using Google Analytics, set to `true` to display a cookie notice banner.
   # When enabled, no user-related data will be stored until the user gives consent.
-  cookies_banner:      true
+  cookies_banner: true
 
   # Set to `true` if you would like to add a "Powered by Hydejack" link in the footer.
   # Note that this setting has no effect when using the free version.
-  advertise:           false
+  advertise: false
 
   # Buyers of the PRO version can opt to hide all dates from the theme.
   # Frequent consumers of online content will know that nothing devalues a post like
   # seeing an old date.
-  hide_dates:          false
+  hide_dates: false
 
-  hide_last_modified:  false
+  hide_last_modified: false
   # Note that dark mode only works in the PRO version of Hydejack.
   dark_mode:
     # Set to `true` to always use the dark theme.
-    always:            true
+    always: true
 
     # Set to `true` to use the dark theme based on visitors' preference (OS setting).
-    dynamic:           true
+    dynamic: true
 
     # Set to `true` to allow visitors to switch between light and dark mode.
-    icon:              false
+    icon: false
 
   # ⚡️ DANGER ZONE ⚡️
   # ----------------
   # This is an _experimental_ feature.
   # Only use if you know what Service Workers are and how they can impact your site!
   offline:
-    enabled:           false
-    cache_version:     13
+    enabled: false
+    cache_version: 13
     precache_assets:
       - /assets/img/swipe.svg
-
 
 # Collections
 # ----------------------------------------------------------------------------------------
 
 collections:
   featured_categories:
-    permalink:         /:name/
-    output:            true
+    permalink: /:name/
+    output: true
 
   featured_tags:
-    permalink:         /tag-:name/
-    output:            true
+    permalink: /tag-:name/
+    output: true
 
   projects:
-    permalink:         /projects/:path/
-    output:            true
-
+    permalink: /projects/:path/
+    output: true
 
 # File inclusion/exclusion
 # ----------------------------------------------------------------------------------------
@@ -331,7 +324,6 @@ exclude:
 include:
   - .well-known
   - LICENSE.md
-
 
 # Plugins
 # ----------------------------------------------------------------------------------------
@@ -349,7 +341,6 @@ plugins:
   - jekyll-titles-from-headings
   - jekyll-include-cache
   - jekyll-last-modified-at
-
 
 # SEO Tag
 # ---------------------------------------------------------------------------------------
@@ -380,34 +371,32 @@ plugins:
 #     - https://twitter.com/<username>
 #     - https://github.com/<username>
 
-
 # Plugin Configs
 # ---------------------------------------------------------------------------------------
 
 optional_front_matter:
-  remove_originals:    true
+  remove_originals: true
 
 readme_index:
-  remove_originals:    true
-  with_frontmatter:    true
+  remove_originals: true
+  with_frontmatter: true
 
 relative_links:
-  collections:         true
+  collections: true
 
 titles_from_headings:
-  strip_title:         true
-  collections:         true
+  strip_title: true
+  collections: true
 
 compress_html:
-  comments:            ["<!-- ", " -->"]
-  clippings:           all
-  endings:             all
+  comments: ["<!-- ", " -->"]
+  clippings: all
+  endings: all
   ignore:
-    envs:              [development]
+    envs: [development]
 
 sass:
-  style:               compressed
-
+  style: compressed
 
 # Jekyll Compose Defaults
 # ---------------------------------------------------------------------------------------
