--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,8 +9,7 @@ author1:
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about: |
     Ever-growing IT engineer<br>
-    Studied Web developing with STS(JAVA, MyBatis, Oracle etc)<br>
-    Data Science with Python, R<br>
+    Web developing & Data Science<br>
     Business, Finances, Economics, International politics<br>
     Please check my [Resume][resume] to find out more about me!<br>
 
