--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -77,10 +77,10 @@ education:
       - "International Marketing"
       - "Financial Management, HRM"
       - "Entrepreneurship"
-  - certificate: "情報処理技師"
-    date: "2020-12-31"
-  - certificate: "Google Analytics Individual Qualification"
-    date: "2020-04-30"
+  # - certificate: "情報処理技師"
+  #   date: "2020-12-31"
+  # - certificate: "Google Analytics Individual Qualification"
+  #   date: "2020-04-30"
 
 projects:
   - title: "[IT] BOOMBOX"
@@ -95,21 +95,36 @@ projects:
   - title: "[IT] Project C.C"
     startDate: "2020-08-15"
     endDate: "2020-12-05"
-    summary: "Concurrent Programming Course"
+    summary: "大学生向けの学生管理及び科目お勧めシステム"
     url: "https://github.com/kdstheace/Project_CollegeCareerpath"
     highlights:
-      - "Implementing Wait-free Snapshot based on the textbook 'The Art of Multiprocessor Programming'"
-      - "Concurrent update & scan function implemented"
-      - "Implement epoch based garbage collection to prevent memory leak & concurrent GC."
+      - "学生User：卒業までの履修単位・語学水準などをもとに科目のお勧め"
+      - "管理者User：学生たちの登録・変更、卒業条件の修正・管理等"
   - title: "[IT] StudyWise"
     startDate: "2021-02-15"
     endDate: ""
-    summary: "Operating System Course"
+    summary: "StudyGroupマッチングサービス"
     url: "https://github.com/kdstheace/Project_STUDYWISE"
     highlights:
-      - "Implement MLFQ & Stride scheduling instead of round robin scheduling."
-      - "Implement Light Weight Process that can be used with most of POSIX-thread functions."
-      - "Implement 'triple indirect block addressing' to support large file upto 1030 MB original limitation was 70 KB."
+      - "StudyGroup管理、ミーティング管理"
+      - "Tutor－StudyGroupマッチング"
+  - title: "[IT/企画] IBK BOX"
+    startDate: "2018-12-29"
+    endDate: "2019-02-15"
+    summary: "Business Solutions/Finance Platform"
+    url: "https://www.ibkbox.net/"
+    highlights:
+      - "プラットフォームで出るデータを活用するビジネスサービス企画"
+      - "単位テスト参加及び企画補助"
+  - title: "[企画] EXA"
+    startDate: "2020-01-29"
+    endDate: "2020-12-15"
+    summary: "成長コミュニティプラットフォーム"
+    url: "https://exaiting.com/"
+    highlights:
+    　- "週に一度読書REVIEWアップロード・共有"
+      - "Startupの実務者たちを招待しビジネスMBA教育サービスを提供"
+      - "学生たちはケーススタディをしながらビジネスソリューションをStartupに提供"
 awards:
   - title: "Hanyang Academic Achievement Award"
     awarder: "Hanyang Univ."
@@ -164,8 +179,8 @@ skills:
   - name: "Sociability"
     level: "Master"
     keywords:
+      - "Teamwork"
       - "Leadership"
-      - "Affable"
 languages:
   - language: "日本語"
     fluency: "Native speaker"
