--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -151,7 +151,7 @@ awards:
     summary: ""
 # publications:
 #   - name: "Video compression for 3d media"
-#     publisher: "Hooli"
+#     publisher: ""
 #     releaseDate: "2014-10-01"
 #     website: "https://en.wikipedia.org/wiki/Silicon_Valley_(TV_series)"
 #     summary: "Innovative middle-out compression algorithm that changes the way we store data."
