--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -122,7 +122,7 @@ projects:
     summary: "成長コミュニティプラットフォーム"
     url: "https://exaiting.com/"
     highlights:
-    　- "週に一度読書REVIEWアップロード・共有"
+    　- "週に一度読書REVIEWアップロード,共有"
       - "Startupの実務者たちを招待しビジネスMBA教育サービスを提供"
       - "学生たちはケーススタディをしながらビジネスソリューションをStartupに提供"
 awards:
