--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -118,8 +118,8 @@ projects:
       - "単位テスト参加及び企画補助"
 
 awards:
-  - title: "Hanyang Academic Achievement Award"
-    awarder: "Hanyang Univ."
+  - title: "Yonsei Academic Achievement Award"
+    awarder: "Yonsei Univ."
     highlights:
       - "2018, 2nd semester"
       - "2017, 2nd semester(Highest Honor)"
