--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -17,7 +17,7 @@ basics:
 
 work:
   - company: "韓国企業銀行"
-    position: "インターン"
+    position: ""
     website: "https://global.ibk.co.kr/"
     startDate: "2019-06-20"
     endDate: "2020-02-11"
