--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -6,9 +6,9 @@ basics:
   phone: "(+82) 010-5612-0881"
   website: "https://kdstheace.github.io/"
   summary: >
-    自分が開発したITサービスで世界を豊かにすることが夢で<br>
+    自分が持っているIT技術や知識で世界を豊かにすることが私の夢です。<br>
     その夢を叶えるために挑戦を続けています。<br>
-    無限成長とチームワーク、そして責任感を大事にして前に進んでいます。
+    無限成長とチームワーク、そして責任感を大事にしながら前に進んでいます。
 
   profiles:
     - network: "Github"
